--- a/src/components/AnimalCard.module.css
+++ b/src/components/AnimalCard.module.css
@@ -1,13 +1,44 @@
 .card {
   border: 1px solid #ddd;
   border-radius: 5px;
+  position: relative;
 }
 
-.card:hover {
-  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
-    rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+.card::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 0;
+  height: 0;
+  transition: all 0.3s ease;
 }
 
+.card::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 0;
+  height: 0;
+  transition: all 0.3s ease;
+}
+
+.card:hover::before {
+  height: 100%;
+  width: 100%;
+  border-top: 4px solid cyan;
+  border-left: 4px solid cyan;
+  border-radius: 5px;
+}
+
+.card:hover::after {
+  height: 100%;
+  width: 100%;
+  border-right: 4px solid lightgreen;
+  border-bottom: 4px solid lightgreen;
+  border-radius: 5px;
+}
 .card img {
   border-radius: 5px 5px 0 0;
   max-width: 100%;
