--- a/src/App.module.css
+++ b/src/App.module.css
@@ -6,3 +6,15 @@
   margin-right: auto;
   margin-left: auto;
 }
+
+input[type="text"] {
+  padding: 0.5rem;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  margin-bottom: 1.5rem;
+}
+
+input[type="text"]:focus {
+  outline: none;
+  border: 1px solid green;
+}
