--- a/src/components/AnimalCard.module.css
+++ b/src/components/AnimalCard.module.css
@@ -2,6 +2,7 @@
   background-color: rgb(250, 232, 210);
   border-radius: 5px;
   position: relative;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
 .card::before {
